DIG-4627 Fix progress bar visibility on mobiles

--- a/docroot/modules/custom/bos_components/modules/bos_search/css/bos_search.css
+++ b/docroot/modules/custom/bos_components/modules/bos_search/css/bos_search.css
@@ -128,7 +128,6 @@
   /*flex-flow: row;*/
   /*align-items: stretch;*/
   padding-top: 32px;
-  display:  none;
 }
 .bos-search-aisearchform .search-request-progress:last-child {
   display: none;
